list items text overflow error solved (word-break: break-all;)

--- a/client/src/components/listTable/listItem.module.css
+++ b/client/src/components/listTable/listItem.module.css
@@ -97,9 +97,7 @@
 .policy_url,
 .organization_url {
   display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  word-break: break-all;
 }
 
 .export_title,
@@ -115,6 +113,7 @@
 .policy_desc,
 .policy_contact {
   white-space: pre-line;
+  word-break: break-all;
 }
 
 .policy_desc,
